<resources>
    <string name="arabic">Arabic</string>
    <string name="bengali">Bengali</string>
    <string name="hindi">Hindi</string>
    <string name="indonesian">Indonesian</string>
    <string name="japanese">Japanese</string>
    <string name="portuguese">Portuguese</string>
    <string name="spanish">Spanish</string>
    <string name="ukrainian">Ukrainian</string>
    <string name="chinese">Chinese</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="german">German</string>
    <string name="italian">Italian</string>
    <string name="kazakh">Kazakh</string>
    <string name="korean">Korean</string>
    <string name="turkish">Turkish</string>
    <string name="russian">Russian</string>
    <string name="arabic_short">Arb</string>
    <string name="bengali_short">Ben</string>
    <string name="hindi_short">Hin</string>
    <string name="japanese_short">Jap</string>
    <string name="indonesian_short">Ind</string>
    <string name="portuguese_short">Por</string>
    <string name="spanish_short">Spa</string>
    <string name="ukrainian_short">Ukr</string>
    <string name="chinese_short">Chi</string>
    <string name="english_short">Eng</string>
    <string name="french_short">Fre</string>
    <string name="german_short">Ger</string>
    <string name="italian_short">Ita</string>
    <string name="kazakh_short">Kaz</string>
    <string name="korean_short">Kor</string>
    <string name="turkish_short">Tur</string>
    <string name="russian_short">Rus</string>
    <string name="app_name" translatable="false">StudyCards</string>
    <string name="title_home">Home</string>
    <string name="title_explore">Explore</string>
    <string name="vocabulary">Vocabulary</string>
    <string name="add_word">Add Word</string>
    <string name="empty">Empty</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="title_in_select_category">Sort the card into:</string>
    <string name="create_category">Create a Set of Cards</string>
    <string name="create_word">Create a word</string>
    <string name="create_folder">Create a set</string>
    <string name="learn">Learn</string>
    <string name="know">Known</string>
    <string name="upper_learn">LEARN</string>
    <string name="upper_know">KNOWN</string>
    <string name="upper_delete">DELETE</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="play">Play</string>
    <string name="repeat">Repeat</string>
    <string name="review_words">Review words</string>
    <string name="pair_it">Pair it</string>
    <string name="guess_it">GUESS IT</string>
    <string name="review">REVIEW</string>
    <string name="repeat_upper">REPEAT</string>
    <string name="one_game">One Game</string>
    <string name="ok">OK</string>
    <string name="great_job">Great job! Keep it up!</string>
    <string name="add_edit_title">Create a word</string>
    <string name="image">Image</string>
    <string name="transcription">transcription</string>
    <string name="icon">icon</string>
    <string name="matching">Matching</string>
    <string name="pairing">Pairing</string>
    <string name="guessing">Guessing</string>
    <string name="cancel">Cancel</string>
    <string name="arrow">Arrow</string>
    <string name="upper_doubt">DOUBTED</string>
    <string name="example">Example</string>
    <string name="uncertain">UNCERTAIN</string>
    <string name="unknown">UNKNOWN</string>
    <string name="unknown_lower">Unknown</string>
    <string name="uncertain_lower">Uncertain</string>
    <string name="uncertain_swipe_text">If you were uncertain\n <b>swipe down</b></string>
    <string name="unknown_swipe_text">If you didn\'t know\n <b>swipe left</b></string>
    <string name="known_swipe_text">If you were right\n <b>swipe right</b></string>
    <string name="repeats">"Repeats: "</string>
    <string name="target_language">Russian</string>
    <string name="source_language">English</string>
    <string name="add_edit_category_hint">Name of a set</string>
    <string name="select_language_toolbar_title">Create new deck</string>
    <string name="select_language_native_language">Your native language</string>
    <string name="select_language_learn_lan">Language you want to learn</string>
    <string name="select_language_continue">Continue</string>
    <string name="settings">Settings</string>
    <string name="language_of_the_app">Language of the app</string>
    <string-array name="vocabulary_tabs">
        <item name="unknown">UNKNOWN</item>
        <item name="uncertain">UNCERTAIN</item>
        <item name="known">KNOWN</item>
    </string-array>
    <string name="select_category_done">Done</string>
    <string name="select_image_title">ENTER URL OF IMAGE</string>
    <string name="url" translatable="false">Url</string>
    <string name="undo">Undo</string>
    <string name="do_u_want_to_delete">Do you want to delete these words?</string>
    <string name="do_u_want_to_delete_category">Do you want to delete this category?</string>
    <string name="do_u_want_to_exit">Do you want to exit?</string>
    <string name="do_u_want_to_delete_this">Do you want to delete <![CDATA[<b><i>%1$s</i></b>]]>?</string>
    <string name="learning_languages">Target language</string>
    <string name="system_language">System\'s language</string>
    <string name="navigate_to_profile">Navigate to profile to change target or source languages</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Sign in</string>
    <string name="google_sign">Continue with Google</string>
    <string name="name">Name</string>
    <string name="finished_repeating">You finished repeating</string>
    <string name="finished_learning">You finished learning</string>
    <string name="finished_review">You finished review</string>
    <string name="finished_guessing">You finished guessing</string>
    <string name="finished_pairing">You finished pairing</string>
    <string name="registration">Registration</string>
    <string name="profile">Profile</string>
    <string name="forgot_password_fragment_title">Reset password</string>
    <string name="new_password">New Password</string>
    <string name="logout">Sign out</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="problem_internet_connection">Problem with internet connection</string>
    <string name="error_occurred">Error occurred</string>
    <string name="socket_timeout_exception">Socket time out exception</string>
    <string name="some_problems_occurred">Some problems occurred</string>
    <string name="password_successfully_changed">Password changed successfully</string>
    <string name="password_unsuccessfully_changed">Password not changed</string>
    <string name="error_wrong_password">Wrong Password</string>
    <string name="something_went_wrong">Something went wrong. Please try again later</string>
    <string name="translated_with_oxford">Translated with Oxford Dictionaries API</string>
    <string name="translated_with_yandex">Translated with Yandex Translate API</string>
    <string name="translate_count_spend">There are no more attempts left. Buy more translations or try it tomorrow</string>
    <string name="name_translation_not_empty">The name or translation fields cannot be empty</string>
    <string name="this_function_not_available">Oops! The function is not available on your device.</string>
    <string name="no_example">There is no examples for this word</string>
    <string name="version">Version: %1$s</string>
    <plurals name="keep_learning">
        <item quantity="one"> Keep learning. There are still %d word ahead</item>
        <item quantity="zero"> Keep learning. There are still %d word ahead</item>
        <item quantity="other"> Keep learning. There are still %d words ahead</item>
    </plurals>
    <plurals name="words">
        <item quantity="one"> %d word</item>
        <item quantity="zero"> %d word</item>
        <item quantity="other"> %d words</item>
    </plurals>
    <plurals name="learn_words">
        <item quantity="one"> %d new word to learn</item>
        <item quantity="zero"> no new words to learn</item>
        <item quantity="other"> %d new words to learn</item>
    </plurals>
    <plurals name="repeat_words">
        <item quantity="one"> %d word to repeat</item>
        <item quantity="zero"> no words to repeat</item>
        <item quantity="other"> %d words to repeat</item>
    </plurals>
    <plurals name="repeat_time_hour">
        <item quantity="one">in a hour</item>
        <item quantity="zero">in a hour</item>
        <item quantity="other"> in %d hours</item>
    </plurals>
    <plurals name="repeat_time_minute">
        <item quantity="one">in a minute</item>
        <item quantity="zero">in a minute</item>
        <item quantity="other"> in %d minutes</item>
    </plurals>
    <string name="choose_category">Please select a category for this word.</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="email_empty">Email cannot be empty</string>
    <string name="name_empty">Name cannot be empty</string>
    <string name="password_empty">Password cannot be empty</string>
    <string name="verify_password_empty">Verify password cannot be empty</string>
    <string name="password_length">Password length should be more than 5</string>
    <string name="email_not_verified">Please, verify your email address</string>
    <string name="passwords_not_same">Passwords are not same</string>
    <string name="we_send_verification">We have sent a confirmation to your email address, please check your email address</string>
    <string name="we_send_reset_password">We have sent a password reset link to your email, please check your email</string>
    <string name="we_couldnt_send_verification">We cannot send verification to this email</string>
    <string name="we_couldnt_send_reset_password">We could not send reset password to this email</string>
    <string name="continue_without_registration">Continue as Guest</string>
    <string name="or">Or</string>
    <string name="register_in_order_to">Register in order to use in several phones simultaneously</string>
    <string name="register">Register</string>
    <string name="linked_successfully">Successfully linked</string>
    <string name="reset_password">Reset the password</string>
    <string name="problem_with_audio">Occurred some problem with audio</string>
    <string name="contact_us">Contact us</string>
    <string name="will_be_available_soon">It will be available in future versions</string>
    <string name="set_of_words">Set of words</string>
    <string name="add_to_yourself">Add to yourself</string>
    <string name="select_all_words">Select all words</string>
    <string name="select_words">Select words</string>
    <string name="add">Add</string>
    <string name="exists">This category already exist</string>
    <string name="empty_home_fragment">There is no sets of words yet. Create new one by clicking + button below</string>
    <string name="change_target_and_native">Change target language with native language</string>
    <string name="study_cards_title">Study Cards Store</string>
    <string name="premium_feature1">You will get a certain number of word translations</string>
    <string name="just_image">Just Image</string>
    <string name="subscribe">Subscribe</string>
    <string name="empty_in_explore">The admins still haven\'t added a single set of words.</string>
    <string name="empty_in_vocabulary">You haven\'t learned a word yet</string>
    <string name="sign_up">Sign up</string>
    <string name="premium_additional_description">You can cancel your subscription at any time</string>
    <string name="premium_feature1_des">You can translate words without leaving the app</string>
</resources>