<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:background="@color/background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_language_toolbar_title"
            android:layout_gravity="center"
            android:textColor="@color/textColor" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/language1_private"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:layout_marginStart="24dp"
        android:text="@string/select_language_native_language"
        android:textColor="@color/textColor"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_native_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:paddingHorizontal="18dp"
        android:clipToPadding= "false"
        tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:orientation="horizontal"
        tools:listitem="@layout/item_language"
        app:layout_constraintTop_toBottomOf="@id/language1_private"/>

    <TextView
        android:id="@+id/language2_private"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_language_learn_lan"
        android:textColor="@color/textColor"
        android:textStyle="bold"
        android:layout_margin="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_native_language"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_learn_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:paddingHorizontal="18dp"
        android:clipToPadding= "false"
        tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:orientation="horizontal"
        tools:listitem="@layout/item_language"
        app:layout_constraintTop_toBottomOf="@id/language2_private"/>

    <Button
        android:id="@+id/read_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginHorizontal="12dp"
        android:text="@string/select_language_continue"
        android:alpha="0.6"
        android:textColor="@color/white"
        android:backgroundTint="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_learn_language"
        />

</androidx.constraintlayout.widget.ConstraintLayout>