<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardElevation="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            tools:ignore="RelativeOverlap">

            <TextView
                android:id="@+id/right_overlay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/border_color_green"
                android:padding="8dp"
                android:rotation="-20"
                android:text="@string/know"
                android:textColor="@color/swiping_know"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bottom_overlay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:background="@drawable/border_color_yellow"
                android:padding="8dp"
                android:text="@string/uncertain_lower"
                android:textColor="@color/swiping_doubted"
                android:textStyle="bold"
                app:drawableTint="@color/colorPrimary" />

            <TextView
                android:id="@+id/left_overlay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/border_color_red"
                android:padding="8dp"
                android:rotation="20"
                android:text="@string/unknown_lower"
                android:textColor="@color/swiping_n_know"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_above="@id/word"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/image"
                android:padding="6dp"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/audio_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/word"
                android:padding="6dp"
                app:srcCompat="@drawable/ic_play"
                app:tint="@color/colorPrimary"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/word"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:paddingVertical="@dimen/activity_vertical_margin"
                android:textColor="@color/textColor"
                android:textStyle="bold"
                tools:text="order" />

            <TextView
                android:id="@+id/translated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/word"
                android:layout_centerHorizontal="true"
                android:layout_marginVertical="@dimen/activity_vertical_margin"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                android:visibility="invisible" />

        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>
